优化基本弹窗代码，采用回调替代RxJava，使用起来更简洁且耦合度更低

--- a/lib_materialdialog/build.gradle
+++ b/lib_materialdialog/build.gradle
@@ -55,7 +55,7 @@ dependencies {
     api "com.ycuwq.widgets:datepicker:$datepickerVersion"
 
     /*rx*/
-    implementation "io.reactivex.rxjava2:rxkotlin:$rx_kotlin"
+    implementation project(path: ':lib_rx')
 
 
 }
