1.升级高德sdk版本 2.新增启动页主题配置，优化启动白屏 3.完善清单配置文件代码

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,8 +17,14 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:allowBackup">
-        <activity android:name=".ui.activity.RoomActivity"></activity>
-        <activity android:name=".ui.activity.CoroutinesActivity"></activity>
+        <activity
+            android:name=".ui.activity.RoomActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.CoroutinesActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.FragmentActivity"
             android:configChanges="keyboardHidden|orientation|screenSize" />
@@ -56,13 +62,16 @@
         <activity
             android:name=".ui.activity.LoginActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
-            android:screenOrientation="portrait">
+            android:theme="@style/SplashTheme"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
         <activity
             android:name=".ui.activity.AutodisposeActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
