1.删除无用v21资源文件 2.优化StateView代码，使用高阶函数代替接口回调，代码更简洁

--- a/lib_base_adapter/build.gradle
+++ b/lib_base_adapter/build.gradle
@@ -50,6 +50,8 @@ dependencies {
 
     /*utils*/
     implementation "com.blankj:utilcodex:$utilcode"
+    implementation project(path: ':lib_resource')
+
 
 }
 
