--- a/lib_eventbus/src/main/AndroidManifest.xml
+++ b/lib_eventbus/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.yzq.lib_eventbus" />
+<manifest package="com.yzq.lib_eventbus" />
