去除lib_img中的无用依赖 更换lib

--- a/lib_img/build.gradle
+++ b/lib_img/build.gradle
@@ -50,15 +50,13 @@ dependencies {
     /*photoView*/
     api "com.github.chrisbanes:PhotoView:$photoview"
 
-    /*RxImagepicker*/
-    api "com.github.qingmei2:rximagepicker:$rx_imgpicker"
-
+    api "com.github.HuanTanSheng:EasyPhotos:$easyPhotos"
     /*utils*/
     implementation "com.blankj:utilcodex:$utilcode"
 
 
     implementation project(path: ':lib_resource')
-    implementation project(path: ':lib_permission')
+
 
 }
 
