--- a/lib_base/src/main/AndroidManifest.xml
+++ b/lib_base/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
     package="com.yzq.lib_base">
 
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application>
 
         <provider
