--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,13 @@ android {
 
     signingConfigs {
 
-        debug {}
+        debug {
+//            storePassword rootProject.ext.signConfigs.storePwd
+//            keyAlias rootProject.ext.signConfigs.keyAlias
+//            keyPassword rootProject.ext.signConfigs.keypwd
+//            storeFile file(rootProject.ext.signConfigs.storeFilePath)
+//            v2SigningEnabled true
+        }
         release {
             storePassword rootProject.ext.signConfigs.storePwd
             keyAlias rootProject.ext.signConfigs.keyAlias
@@ -42,12 +48,12 @@ android {
 
 
         debug {
-
+            signingConfig signingConfigs.release
 //            minifyEnabled true
 //            zipAlignEnabled true
 //            shrinkResources true
 //            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+    }
         release {
             signingConfig signingConfigs.release
             minifyEnabled true
@@ -69,8 +75,6 @@ kapt {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     kapt "com.alibaba:arouter-compiler:$arouter_compiler"
     implementation "com.github.yuzhiqiang1993:zxing:${zxing_version}"
     implementation "org.jsoup:jsoup:${jsoup_version}"
