--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ apply plugin: 'AndResGuard'
 apply plugin: "com.github.ben-manes.versions"
 android {
     compileSdkVersion compile_sdk_version
+    buildToolsVersion build_tools_version
     defaultConfig {
         applicationId "com.yzq.kotlincommon"
         minSdkVersion min_sdk_version
