--- a/common/build.gradle
+++ b/common/build.gradle
@@ -12,6 +12,7 @@ kapt {
 
 android {
     compileSdkVersion compile_sdk_version
+    buildToolsVersion build_tools_version
     defaultConfig {
         minSdkVersion min_sdk_version
         targetSdkVersion target_sdk_version
