--- a/lib_net/build.gradle
+++ b/lib_net/build.gradle
@@ -6,6 +6,7 @@ apply plugin: "com.github.ben-manes.versions"
 
 android {
     compileSdkVersion compile_sdk_version
+    buildToolsVersion build_tools_version
     defaultConfig {
         minSdkVersion min_sdk_version
         targetSdkVersion target_sdk_version
