--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,10 +61,14 @@ kapt {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     kapt "com.alibaba:arouter-compiler:$arouter_compiler"
     implementation "com.github.yuzhiqiang1993:zxing:${zxing_version}"
     implementation "org.jsoup:jsoup:${jsoup_version}"
     implementation "com.meituan.android.walle:library:${walleVersion}"
+
+    implementation 'com.google.android.exoplayer:exoplayer:2.10.7'
 
     implementation project(':common')
     implementation project(':lib_room')
