--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,14 @@ android {
 
     buildTypes {
 
+        debug {
+            signingConfig signingConfigs.release
+            minifyEnabled false
+            zipAlignEnabled false
+            shrinkResources false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+
         release {
             signingConfig signingConfigs.release
             minifyEnabled true
