--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':common', ':gao_de_map', ':lib_base', ':lib_net', ':lib_img', ':lib_resource', ':lib_eventbus', ':lib_materialdialog', ':lib_rx', ':lib_widget',  ':lib_permission', ':lib_base_adapter', ':lib_coroutine', ':lib_room'
+include ':app', ':common', ':gao_de_map', ':lib_base', ':lib_img', ':lib_resource', ':lib_eventbus', ':lib_materialdialog', ':lib_rx', ':lib_widget',  ':lib_permission', ':lib_base_adapter', ':lib_coroutine', ':lib_room'
