1.启用R8 2.将Retrofit相关依赖移至lib_base中

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ org.gradle.jvmargs=-Xmx1536m
 kotlin.code.style=official
 isModule=true
 authToken=jp_45koepdran5gsmk15cdvtf3lhc
+android.enableR8=true
