新增ViewPager2依赖及示例

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:allowBackup">
+        <activity android:name=".ui.activity.ViewPager2Activity"></activity>
         <activity
             android:name=".ui.activity.ExoPlayerActivity"
             android:configChanges="keyboardHidden|orientation|screenSize" />
