--- a/config.gradle
+++ b/config.gradle
@@ -13,7 +13,7 @@ ext {
 
     /*AndroidX*/
     appcompat = "1.1.0"
-    material = "1.0.0"
+    material = "1.2.0-alpha02"
     vectordrawable = "1.1.0"
     constraintlayout = "1.1.3"
     annotation = "1.1.0"
