--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,19 +69,20 @@ kapt {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "com.alibaba:arouter-compiler:$arouter_compiler"
     implementation "com.github.yuzhiqiang1993:zxing:${zxing_version}"
     implementation "org.jsoup:jsoup:${jsoup_version}"
     implementation "com.meituan.android.walle:library:${walleVersion}"
 
+
+    api "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    api "androidx.room:room-ktx:$room_version"
+
+
     implementation 'com.google.android.exoplayer:exoplayer:2.10.8'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
     implementation project(':common')
-    implementation project(':lib_room')
-    kapt "androidx.room:room-compiler:$room_version"
     if (isModule.toBoolean()) {
         implementation project(':gao_de_map')
     }
