--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -60,6 +60,12 @@ dependencies {
     api "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
 
 
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines"
+
+    api "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+
+
     /*下拉刷新*/
     api "androidx.swiperefreshlayout:swiperefreshlayout:$swiperefreshlayout"
 
@@ -95,7 +101,6 @@ dependencies {
     api project(path: ':lib_resource')
     api project(path: ':lib_rx')
     api project(path: ':lib_widget')
-    api project(path: ':lib_coroutine')
 
 
 }
