新增只保留中文的string资源配置

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ android {
         versionName version_name
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
+        resConfigs "zh"
         ndk {
             abiFilters "armeabi-v7a"
         }
