--- a/config.gradle
+++ b/config.gradle
@@ -2,7 +2,7 @@ ext {
 
     /*defaultConfig*/
     compile_sdk_version = 29
-    build_tools_version="29.0.0"
+    build_tools_version = "29.0.0"
     min_sdk_version = 21
     target_sdk_version = 29
     version_code = 10  //eg:1->0.0.1  10->0.1.0  100->1.0.0
@@ -12,14 +12,14 @@ ext {
     /*dependencies*/
 
     /*AndroidX*/
-    appcompat = "1.1.0"
+    appcompat = "1.2.0-alpha01"
     material = "1.2.0-alpha02"
     vectordrawable = "1.1.0"
-    constraintlayout = "1.1.3"
+    constraintlayout = "2.0.0-beta3"
     annotation = "1.1.0"
     multiDexVersion = "2.0.1"
-    lifecycle_version = "2.1.0"
-    kotlinx_coroutines = "1.3.2"
+    lifecycle_version = "2.2.0-rc03"
+    kotlinx_coroutines = "1.3.3"
     swiperefreshlayout = "1.0.0"
     room_version = "2.2.2"
 
@@ -48,7 +48,7 @@ ext {
     bugly_nativecrashreport = '3.7.1'
     datepickerVersion = "1.3.1"
     flexbox = "2.0.0"
-    gradle_versions_plugin = "0.21.0"
+    gradle_versions_plugin = "0.27.0"
     zxing_version = "2.2.8"
     jsoup_version = "1.12.1"
     leakcanary_android = "2.0"
