--- a/config.gradle
+++ b/config.gradle
@@ -13,15 +13,15 @@ ext {
 
     /*AndroidX*/
     appcompat = "1.2.0-alpha01"
-    material = "1.2.0-alpha02"
+    material = "1.2.0-alpha03"
     vectordrawable = "1.1.0"
-    constraintlayout = "2.0.0-beta3"
+    constraintlayout = "2.0.0-beta4"
     annotation = "1.1.0"
     multiDexVersion = "2.0.1"
     lifecycle_version = "2.2.0-rc03"
     kotlinx_coroutines = "1.3.3"
-    swiperefreshlayout = "1.0.0"
-    room_version = "2.2.2"
+    swiperefreshlayout = "1.1.0-alpha03"
+    room_version = "2.2.3"
 
     /*third party*/
     eventbus = "3.1.1"
