--- a/common/build.gradle
+++ b/common/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     /*处理图片方向*/
-    implementation 'androidx.exifinterface:exifinterface:1.2.0-beta01'
+    implementation 'androidx.exifinterface:exifinterface:1.3.0-alpha01'
 
     kapt "com.alibaba:arouter-compiler:$arouter_compiler"
 
