--- a/config.gradle
+++ b/config.gradle
@@ -12,7 +12,7 @@ ext {
     /*dependencies*/
 
     /*AndroidX*/
-    appcompat = "1.2.0-alpha02"
+    appcompat = '1.2.0-alpha03'
     material = "1.2.0-alpha05"
     vectordrawable = "1.1.0"
     constraintlayout = "2.0.0-beta4"
@@ -20,7 +20,7 @@ ext {
     multiDexVersion = "2.0.1"
     lifecycle_version = "2.2.0"
     kotlinx_coroutines = "1.3.3"
-    swiperefreshlayout = "1.1.0-alpha03"
+    swiperefreshlayout = '1.1.0-beta01'
     room_version = "2.2.4"
 
     /*third party*/
@@ -44,7 +44,7 @@ ext {
     walleVersion = "1.1.6"
     andResGuardVersion = "1.2.17"
     easyPhotos = "3.0.4"
-    bugly_crashreport_upgrade = '1.4.2'
+    bugly_crashreport_upgrade = '1.4.5'
     bugly_nativecrashreport = '3.7.1'
     datepickerVersion = "1.3.1"
     flexbox = "2.0.1"
@@ -52,8 +52,9 @@ ext {
     zxing_version = "2.2.8"
     jsoup_version = "1.12.2"
     leakcanary_android = "2.2"
-
-
+    bannerViewPager = "2.7.0"
+    viewpager2="1.0.0"
+    roundedImageView="0.8.4"
     signConfigs = [
             storeFilePath: "kotlinCommon",
             storePwd     : "123456",
