--- a/build.gradle
+++ b/build.gradle
@@ -7,10 +7,11 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
+        classpath 'com.android.tools.build:gradle:3.6.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         classpath "org.jetbrains.kotlin:kotlin-android-extensions:$kotlin_version"
@@ -34,7 +35,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-
+        mavenCentral()
         maven {
             url "https://jitpack.io"
             credentials { username authToken }
