--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        mavenCentral()
+//        mavenCentral()
 
     }
     dependencies {
@@ -35,7 +35,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        mavenCentral()
+//        mavenCentral()
         maven {
             url "https://jitpack.io"
             credentials { username authToken }
