--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.70'
+    ext.kotlin_version = '1.3.71'
 
     apply from: file("config.gradle")
     repositories {
         google()
         jcenter()
-        //   mavenCentral()
+        mavenCentral()
 
     }
     dependencies {
@@ -35,7 +35,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        //     mavenCentral()
+        mavenCentral()
         maven {
             url "https://jitpack.io"
             credentials { username authToken }
