--- a/config.gradle
+++ b/config.gradle
@@ -12,7 +12,7 @@ ext {
     /*dependencies*/
 
     /*AndroidX*/
-    appcompat = '1.2.0-alpha03'
+    appcompat = '1.2.0-beta01'
     material = "1.2.0-alpha05"
     vectordrawable = "1.1.0"
     constraintlayout = "2.0.0-beta4"
