--- a/config.gradle
+++ b/config.gradle
@@ -12,38 +12,38 @@ ext {
     /*dependencies*/
 
     /*AndroidX*/
-    appcompat = '1.2.0-beta01'
-    material = "1.2.0-alpha05"
-    vectordrawable = "1.1.0"
-    constraintlayout = "2.0.0-beta4"
-    annotation = "1.1.0"
+    appcompat = '1.3.0-alpha01'
+    material = "1.3.0-alpha01"
+    vectordrawable = "1.2.0-alpha01"
+    constraintlayout = "2.0.0-beta6"
+    annotation = "1.2.0-alpha01"
     multiDexVersion = "2.0.1"
     lifecycle_version = "2.2.0"
-    kotlinx_coroutines = "1.3.5"
-    swiperefreshlayout = '1.1.0-beta01'
+    kotlinx_coroutines = "1.3.7"
+    swiperefreshlayout = '1.1.0-rc01'
     room_version = "2.2.5"
 
     /*third party*/
     eventbus = "3.2.0"
     glide = "4.11.0"
     permission = "2.0.3"
-    retrofit = "2.8.1"
+    retrofit = "2.9.0"
     progressmanager_version = "1.5.0"
-    ok_http = "4.4.1"
+    ok_http = "4.7.2"
     rx_android = "2.1.1"
     rx_kotlin = "2.4.0"
     autodispose_version = "1.2.0"
     gson = "2.8.6"
     material_dialogs = "3.3.0"
-    baseRecyclerViewAdapterHelper = "3.0.1"
+    baseRecyclerViewAdapterHelper = "3.0.4"
     photoview = "2.3.0"
     objectboxVersion = "2.3.4"
-    utilcode = "1.26.0"
+    utilcode = "1.29.0"
     arouter_api = "1.5.0"
     arouter_compiler = "1.2.2"
     walleVersion = "1.1.6"
-    andResGuardVersion = "1.2.17"
-    easyPhotos = "3.0.4"
+    andResGuardVersion = "1.2.18"
+    easyPhotos = "3.0.6"
     bugly_crashreport_upgrade = '1.4.5'
     bugly_nativecrashreport = '3.7.1'
     datepickerVersion = "1.3.1"
@@ -51,9 +51,9 @@ ext {
     gradle_versions_plugin = "0.28.0"
     zxing_version = "2.2.8"
     jsoup_version = '1.13.1'
-    leakcanary_android = "2.2"
-    bannerViewPager = "2.7.3"
-    viewpager2 = "1.0.0"
+    leakcanary_android = "2.3"
+    bannerViewPager = "3.1.2"
+    viewpager2 = "1.1.0-alpha01"
     roundedImageView = "0.8.4"
     signConfigs = [
             storeFilePath: "kotlinCommon",
