--- a/config.gradle
+++ b/config.gradle
@@ -20,7 +20,7 @@ ext {
     multiDexVersion = "2.0.1"
     lifecycle_version = "2.2.0"
     kotlinx_coroutines = "1.3.7"
-    swiperefreshlayout = '1.1.0-rc01'
+    swiperefreshlayout = '1.1.0'
     room_version = "2.2.5"
 
     /*third party*/
