--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -56,8 +56,13 @@ dependencies {
     api "androidx.annotation:annotation:$annotation"
     api "androidx.multidex:multidex:$multiDexVersion"
 
-    // ViewModel and LiveData
-    api "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+    // ViewModel
+    api "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    // LiveData
+    api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+    // Lifecycles only (without ViewModel or LiveData)
+    api "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+
 
 
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines"
