--- a/config.gradle
+++ b/config.gradle
@@ -15,11 +15,11 @@ ext {
     appcompat = '1.3.0-alpha01'
     material = "1.3.0-alpha01"
     vectordrawable = "1.2.0-alpha01"
-    constraintlayout = "2.0.0-beta6"
+    constraintlayout = "2.0.1"
     annotation = "1.2.0-alpha01"
     multiDexVersion = "2.0.1"
     lifecycle_version = "2.2.0"
-    kotlinx_coroutines = "1.3.8"
+    kotlinx_coroutines = "1.3.9"
     swiperefreshlayout = '1.1.0'
     room_version = "2.2.5"
 
@@ -28,7 +28,7 @@ ext {
     glide = "4.11.0"
     retrofit = "2.9.0"
     progressmanager_version = "1.5.0"
-    ok_http = "4.8.0"
+    ok_http = "4.8.1"
     rx_android = "2.1.1"
     rx_kotlin = "2.4.0"
     autodispose_version = "1.2.0"
@@ -51,7 +51,7 @@ ext {
     zxing_version = "2.2.8"
     jsoup_version = '1.13.1'
     leakcanary_android = "2.4"
-    bannerViewPager = "3.1.5"
+    bannerViewPager = "3.1.6"
     viewpager2 = "1.1.0-alpha01"
     roundedImageView = "0.8.4"
     signConfigs = [
