--- a/config.gradle
+++ b/config.gradle
@@ -12,11 +12,11 @@ ext {
     /*dependencies*/
 
     /*AndroidX*/
-    appcompat = '1.3.0-alpha01'
-    material = "1.3.0-alpha01"
-    vectordrawable = "1.2.0-alpha01"
+    appcompat = '1.2.0'
+    material = "1.2.0"
+    vectordrawable = "1.1.0"
     constraintlayout = "2.0.1"
-    annotation = "1.2.0-alpha01"
+    annotation = "1.1.0"
     multiDexVersion = "2.0.1"
     lifecycle_version = "2.2.0"
     kotlinx_coroutines = "1.3.9"
