--- a/common/build.gradle
+++ b/common/build.gradle
@@ -41,6 +41,10 @@ android {
     }
 
 
+    dataBinding {
+        enabled = true
+    }
+
 }
 
 
@@ -54,11 +58,9 @@ dependencies {
     kapt "com.alibaba:arouter-compiler:$arouter_compiler"
 
 
-
     api "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     api "androidx.room:room-ktx:$room_version"
-
 
 
     /*Bugly*/
