--- a/gao_de_map/build.gradle
+++ b/gao_de_map/build.gradle
@@ -55,6 +55,14 @@ android {
         }
     }
 
+
+    dataBinding {
+        enabled = true
+    }
+    viewBinding {
+        enabled = true
+    }
+
 }
 
 
