--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -43,6 +43,15 @@ android {
     }
 
 
+    dataBinding {
+        enabled = true
+    }
+
+    viewBinding {
+        enabled = true
+    }
+
+
 }
 
 
