--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,12 +58,9 @@ android {
         }
     }
 
-    dataBinding {
-        enabled = true
-    }
-
-    viewBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding true
+        viewBinding true
     }
 
 }
