--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -42,12 +42,9 @@ android {
     }
 
 
-    dataBinding {
-        enabled = true
-    }
-
-    viewBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding true
+        viewBinding true
     }
 
 
