--- a/common/build.gradle
+++ b/common/build.gradle
@@ -40,9 +40,11 @@ android {
     }
 
 
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding true
+        viewBinding true
     }
+
 
 }
 
