--- a/gao_de_map/build.gradle
+++ b/gao_de_map/build.gradle
@@ -55,12 +55,11 @@ android {
     }
 
 
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding true
+        viewBinding true
     }
-    viewBinding {
-        enabled = true
-    }
+
 
 }
 
