--- a/lib_materialdialog/build.gradle
+++ b/lib_materialdialog/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     api "com.afollestad.material-dialogs:bottomsheets:$material_dialogs"
     api "com.afollestad.material-dialogs:lifecycle:$material_dialogs"
 
-
+    /*日期选择*/
     api 'com.github.loperSeven:DateTimePicker:0.3.0'
 
     /*Datepicker*/
