--- a/gao_de_map/build.gradle
+++ b/gao_de_map/build.gradle
@@ -73,7 +73,7 @@ kapt {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     kapt "com.alibaba:arouter-compiler:$arouter_compiler"
 
 
