--- a/common/build.gradle
+++ b/common/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: "com.github.ben-manes.versions"
 
+
 kapt {
     arguments {
         arg("AROUTER_MODULE_NAME", project.getName())
@@ -51,7 +52,8 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+//    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 
     /*处理图片方向*/
     implementation 'androidx.exifinterface:exifinterface:1.3.2'
