--- a/common/src/main/AndroidManifest.xml
+++ b/common/src/main/AndroidManifest.xml
@@ -4,13 +4,12 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
-    <application
-        android:allowBackup="false"
-        android:largeHeap="true"
-        android:theme="@style/AppTheme" />
+<!--    <application-->
+<!--        android:allowBackup="false"-->
+<!--        android:largeHeap="true"-->
+<!--        android:theme="@style/AppTheme" />-->
 
 
 </manifest>
