--- a/gao_de_map/build.gradle
+++ b/gao_de_map/build.gradle
@@ -73,13 +73,13 @@ kapt {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    //implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     kapt "com.alibaba:arouter-compiler:$arouter_compiler"
 
 
     implementation project(':common')
 
-    api 'com.amap.api:location:5.3.0'
-    api 'com.amap.api:3dmap:7.8.0'
+    api 'com.amap.api:location:5.3.1'
+    api 'com.amap.api:3dmap:7.9.0'
 
 }
