--- a/config.gradle
+++ b/config.gradle
@@ -15,9 +15,11 @@ ext {
     material = "1.3.0"
     vectordrawable = "1.1.0"
     constraintlayout = "2.0.4"
-    annotation = "1.1.0"
+    annotation = "1.2.0"
     multiDexVersion = "2.0.1"
-    lifecycle_version = "2.3.0"
+    core_ktx = "1.3.2"
+    lifecycle_ktx = "2.3.1"
+    collection_ktx = "1.1.0"
     kotlinx_coroutines = "1.4.3"
     swiperefreshlayout = '1.1.0'
     room_version = '2.2.6'
@@ -27,7 +29,7 @@ ext {
     glide = "4.12.0"
     retrofit = "2.9.0"
     progressmanager_version = "1.5.0"
-    ok_http = "4.9.0"
+    ok_http = "5.0.0-alpha.2"
     rx_android = "2.1.1"
     rx_kotlin = "2.4.0"
     autodispose_version = "1.2.0"
@@ -49,7 +51,7 @@ ext {
     gradle_versions_plugin = "0.36.0"
     zxing_version = "2.2.8"
     jsoup_version = '1.13.1'
-    leakcanary_android = "2.6"
+    leakcanary_android = "2.7"
     bannerViewPager = "3.5.0"
     viewpager2 = "1.1.0-alpha01"
     roundedImageView = "0.8.4"
