--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -58,21 +58,26 @@ dependencies {
     api "com.google.android.material:material:$material"
     api "androidx.vectordrawable:vectordrawable:$vectordrawable"
     api "androidx.constraintlayout:constraintlayout:$constraintlayout"
+
     api "androidx.annotation:annotation:$annotation"
     api "androidx.multidex:multidex:$multiDexVersion"
 
-    // ViewModel
-    api "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    // LiveData
-    api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-    // Lifecycles only (without ViewModel or LiveData)
-    api "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    //KTX core
+
+    api "androidx.core:core-ktx:$core_ktx"
+
+    //ViewModel
+    api "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_ktx"
+    //LiveData
+    api "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_ktx"
+    //Lifecycles only (without ViewModel or LiveData)
+    api "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_ktx"
+    /*collection*/
+    api "androidx.collection:collection-ktx:$collection_ktx"
 
 
     api "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinx_coroutines"
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinx_coroutines"
-
-    api "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
 
     /*下拉刷新*/
