更新部分sdk版本  完善多渠道打包配置

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
-//apply plugin: 'walle'
 apply plugin: 'AndResGuard'
 apply plugin: "com.github.ben-manes.versions"
 android {
@@ -77,7 +76,7 @@ android {
         applicationVariants.all { variant ->
             variant.outputs.all { output ->
 
-                def date = new Date().format("yyyy-MM-dd HH:mm", TimeZone.getTimeZone("GMT+8"))
+                def date = new Date().format("yyyy-MM-dd_HH-mm", TimeZone.getTimeZone("GMT+8"))
 
                 outputFileName = "${defaultConfig.applicationId}-${variant.productFlavors[0].name}_${defaultConfig.versionName}-${date}.apk"
             }
@@ -126,13 +125,6 @@ dependencies {
 
 
 }
-
-//
-//walle {
-//    apkOutputFolder = new File("${project.buildDir}/outputs/channels")
-//    apkFileNameFormat = '${projectName}-${channel}-${buildType}-v${versionName}-${versionCode}-${buildTime}.apk'
-//    channelFile = new File("${project.getProjectDir()}/channel")
-//}
 
 
 andResGuard {
