--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:theme="@style/Theme.XeonYuTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning,UnusedAttribute,LockedOrientationActivity"
-        tools:replace="android:allowBackup">
+        tools:replace="android:allowBackup,andrpod:label">
         <activity
             android:name=".ui.activity.ViewBindingActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
