--- a/config.gradle
+++ b/config.gradle
@@ -20,9 +20,9 @@ ext {
     core_ktx = "1.3.2"
     lifecycle_ktx = "2.3.1"
     collection_ktx = "1.1.0"
-    kotlinx_coroutines = "1.4.3"
+    kotlinx_coroutines = '1.5.0'
     swiperefreshlayout = '1.1.0'
-    room_version = '2.2.6'
+    room_version = '2.3.0'
 
     /*third party*/
     eventbus = "3.2.0"
