--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'AndResGuard'
 apply plugin: "com.github.ben-manes.versions"
 
 android {
@@ -19,17 +18,6 @@ android {
             abiFilters "armeabi-v7a"
         }
     }
-
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
-    }
-
 
     signingConfigs {
 
@@ -77,7 +65,7 @@ android {
         applicationVariants.all { variant ->
             variant.outputs.all { output ->
 
-                def date = new Date().format("yyyy-MM-dd_HH-mm", TimeZone.getTimeZone("GMT+8"))
+                def date = new Date().format("yyyy-MM-dd HH-mm", TimeZone.getTimeZone("GMT+8"))
 
                 outputFileName = "${defaultConfig.applicationId}-${variant.productFlavors[0].name}_${defaultConfig.versionName}-${date}.apk"
             }
@@ -92,6 +80,10 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    kotlinOptions {
+        jvmTarget = '1.8'
     }
 
 
@@ -124,45 +116,5 @@ dependencies {
         implementation project(':gao_de_map')
     }
 
-
-}
-
-
-andResGuard {
-    // mappingFile = file("./resource_mapping.txt")
-    mappingFile = null
-    use7zip = true
-    useSign = true
-    // 打开这个开关，会keep住所有资源的原始路径，只混淆资源的名字
-    keepRoot = false
-    whiteList = [
-            // for your icon
-            "R.drawable.icon",
-            // for fabric
-            "R.string.com.crashlytics.*",
-            // for google-services
-            "R.string.google_app_id",
-            "R.string.gcm_defaultSenderId",
-            "R.string.default_web_client_id",
-            "R.string.ga_trackingId",
-            "R.string.firebase_database_url",
-            "R.string.google_api_key",
-            "R.string.google_crash_reporting_api_key"
-    ]
-    compressFilePattern = [
-            "*.png",
-            "*.jpg",
-            "*.jpeg",
-            "*.gif",
-    ]
-    sevenzip {
-        artifact = "com.tencent.mm:SevenZip:$andResGuardVersion"
-    }
-}
-
-
-afterEvaluate {
-    tasks.getByName("assembleRelease")
-            .dependsOn(resguardRelease)
 
 }
