--- a/config.gradle
+++ b/config.gradle
@@ -11,13 +11,13 @@ ext {
     /*dependencies*/
 
     /*AndroidX*/
-    appcompat = '1.2.0'
+    appcompat = '1.3.0'
     material = "1.3.0"
     vectordrawable = "1.1.0"
     constraintlayout = "2.0.4"
     annotation = "1.2.0"
     multiDexVersion = "2.0.1"
-    core_ktx = "1.3.2"
+    core_ktx = '1.5.0'
     lifecycle_ktx = "2.3.1"
     collection_ktx = "1.1.0"
     kotlinx_coroutines = '1.5.0'
@@ -42,7 +42,6 @@ ext {
     arouter_api = "1.5.1"
     arouter_compiler = "1.5.1"
     walleVersion = "1.1.7"
-    andResGuardVersion = "1.2.21"
     easyPhotos = "3.1.3"
     bugly_crashreport_upgrade = '1.5.1'
     bugly_nativecrashreport = '3.9.1'
