--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -106,7 +106,7 @@ dependencies {
     api project(path: ':lib_materialdialog')
     api project(path: ':lib_permission')
     api project(path: ':lib_resource')
-    api project(path: ':lib_rx')
+//    api project(path: ':lib_rx')
     api project(path: ':lib_widget')
 
 
