--- a/bs_diff/build.gradle
+++ b/bs_diff/build.gradle
@@ -14,11 +14,11 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
-//        externalNativeBuild {
-//            cmake {
-//                cppFlags ''
-//            }
-//        }
+        externalNativeBuild {
+            cmake {
+                cppFlags ''
+            }
+        }
     }
 
     buildTypes {
@@ -40,13 +40,13 @@ android {
         }
     }
 
-//
-//    externalNativeBuild {
-//        cmake {
-//            path file('src/main/jni/CMakeLists.txt')
-//            version '3.10.2'
-//        }
-//    }
+
+    externalNativeBuild {
+        cmake {
+            path file('src/main/jni/CMakeLists.txt')
+            version '3.10.2'
+        }
+    }
 
 }
 
