--- a/settings.gradle
+++ b/settings.gradle
@@ -9,7 +9,8 @@ include ':app',
         ':lib_rx',
         ':lib_widget',
         ':lib_permission',
-        ':lib_base_adapter'
+        ':lib_base_adapter',
+        ':bs_diff'
 
 
 //gradle.buildStarted {
@@ -37,4 +38,4 @@ include ':app',
 //})
 //
 //
-include ':bs_diff'
+
