--- a/bs_diff/build.gradle
+++ b/bs_diff/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk compile_sdk_version
 
     defaultConfig {
         minSdk min_sdk_version
