--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,10 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+
+
+/*当前文件用来配置所有子工程公用的配置*/
+
+println("我是根目录下的build.gradle")
+
 
 buildscript {
     apply from: file("config.gradle")
