--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,5 @@
-## For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
-#
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-# Default value: -Xmx1024m -XX:MaxPermSize=256m
+#用来配置一些属性值
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-#
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
-#Thu Mar 04 21:01:51 CST 2021
 android.enableJetifier=true
 android.useAndroidX=true
 authToken=jp_45koepdran5gsmk15cdvtf3lhc
