--- a/settings.gradle
+++ b/settings.gradle
@@ -26,8 +26,7 @@ include ':app',
         ':lib_materialdialog',
         ':lib_widget',
         ':lib_permission',
-        ':lib_base_adapter',
-        ':bs_diff'
+        ':lib_base_adapter'
 
 
 /*settings.gradle里的代码会在初始化回调之前执行*/
